# BootCamp2024_cpp_tasks

./: CMakeLists.txt  README.md
Hello_world/: HelloWorld.cpp
LPF/: LPF.cpp  LPF.h
csv_Input/: csv_Input.cpp
csv_Output/: csv_Output.cpp
